[tool.poetry]
name = "ro-crate-benchmarks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.13"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
ipykernel = "^6.15.1"
rocrate = "0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
